--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,44 @@
 body {
   margin: 0;
+  text-align: center;
+  font-family: "Share Tech Mono", monospace;
 }
 
 .top-container {
   background-color: azure;
+  position: relative;
+  padding-top: 100px;
+}
+
+#top-cloud {
+  position: absolute;
+  right: 350px;
+  top: 40px;
 }
 
 h1 {
   margin-top: 0;
+  font-family: "Ubuntu Mono", monospace;
 }
 
 #pro {
   text-decoration: underline;
 }
 
+#bottom-cloud {
+  position: absolute;
+  top: 230px;
+  left: 300px;
+}
+
 .middle-container {
   width: 200px;
   height: 200px;
   background-color: bisque;
+}
+
+h2 {
+  font-family: "Red Hat Mono", monospace;
 }
 
 .bottom-container {
