--- a/css/styles.css
+++ b/css/styles.css
@@ -2,23 +2,30 @@ body {
   margin: 0;
   text-align: center;
   font-family: "Share Tech Mono", monospace;
+  font-size: 1.25em;
+  color: #40514e;
+  line-height: 1.5;
 }
 
 .top-container {
-  background-color: azure;
+  background-color: #eaf6f6;
   position: relative;
-  padding-top: 100px;
+  padding-top: 150px;
 }
 
 #top-cloud {
   position: absolute;
-  right: 350px;
-  top: 40px;
+  right: 300px;
+  top: 75px;
 }
 
 h1 {
   margin-top: 0;
   font-family: "Ubuntu Mono", monospace;
+  font-size: 4.25rem;
+  padding: 100px auto 0 auto;
+  color: #66bfbf;
+  line-height: 0.75;
 }
 
 #pro {
@@ -27,19 +34,93 @@ h1 {
 
 #bottom-cloud {
   position: absolute;
-  top: 230px;
-  left: 300px;
+  top: 350px;
+  left: 250px;
+}
+
+hr {
+  border-top: 15px dotted #eaf6f6;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  width: 10%;
+  margin: 75px auto;
 }
 
 .middle-container {
+  margin: 100px auto;
+}
+
+#bio {
+  width: 50%;
+  margin: auto;
 }
 
 h2 {
   font-family: "Red Hat Mono", monospace;
+  font-size: 1.75rem;
+  color: #66bfbf;
+  font-weight: normal;
 }
-h2 {
+h3 {
   font-family: "Red Hat Mono", monospace;
+  color: #11999e;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+}
+.skill-row img {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
 }
 
 .bottom-container {
+  background-color: #66bfbf;
+  height: 100px;
+  padding: 30px;
+}
+
+.contact-me {
+  margin: 50px auto;
+}
+
+#contact-message {
+  width: 50%;
+  margin: auto;
+}
+
+#btn {
+  border: none;
+  color: white;
+  background-color: #4caf50;
+  padding: 15px 32px;
+  border-radius: 8px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.5rem;
+  margin: 50px auto;
+  cursor: pointer;
+}
+
+#btn:hover {
+  background: olivedrab;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a {
+  color: #11999e;
+  margin: 10px 25px;
+  text-decoration: none;
+}
+a:hover {
+  color: #eaf6f6;
+}
+
+.bottom-container p {
+  color: #eaf6f6;
 }
