--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ body {
   text-decoration: none;
   font-size: 18px;
   font-weight: bold;
+  margin: 10px 25px;
 }
 
 .nav-bar a:hover {
@@ -60,6 +61,9 @@ body {
   right: 150px;
   top: 300px;
   width: 10%;
+}
+#developer {
+  width: 25%;
 }
 
 h1 {
@@ -109,6 +113,10 @@ hr {
   margin: auto;
   text-align: justify;
 }
+a {
+  color: #11999e;
+  text-decoration: none;
+}
 
 h2 {
   font-family: "Red Hat Mono", monospace;
@@ -145,6 +153,29 @@ h3 {
   float: left;
   margin-right: 30px;
   margin-bottom: 30px;
+}
+
+.projects {
+  margin: 30px;
+  gap: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  align-items: center;
+}
+.project {
+  width: 50%;
+}
+.project:hover {
+  width: 75%;
+}
+.tools {
+  font-size: xx-large;
+  font-weight: bolder;
+  line-height: 2;
+}
+.tools li {
+  list-style-type: none;
 }
 
 .icon {
@@ -192,7 +223,7 @@ h3 {
   text-decoration: none;
 }
 
-a {
+.bottom-container a {
   color: #11999e;
   margin: 10px 25px;
   text-decoration: none;
