--- a/css/styles.css
+++ b/css/styles.css
@@ -51,11 +51,6 @@ body {
   padding-bottom: 60px;
 }
 
-#top-cloud {
-  position: absolute;
-  right: 300px;
-  top: 275px;
-}
 #top-cono {
   position: absolute;
   right: 150px;
@@ -64,6 +59,10 @@ body {
 }
 #developer {
   width: 25%;
+}
+
+#env {
+  width: 37.5%;
 }
 
 h1 {
@@ -79,11 +78,6 @@ h1 {
   text-decoration: underline;
 }
 
-#bottom-cloud {
-  position: absolute;
-  top: 325px;
-  left: 250px;
-}
 #safety-first {
   width: 35%;
   margin-top: 25px;
